# magic_guid

./: Makefile  README.md  index.html  mguid.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml  publish-tagged.yml  validate-main.yml
docs/: index.html  quickdocs.py  styles.css
magic_guid/: __init__.py  examples.py  run_examples.py
utils/: quickdocs.py
