[build-system]
requires = ["setuptools","qdox @ git+https://github.com/eudoxys/qdox"]
build-backend = "setuptools.build_meta"

[project]
name = "mguid"
version = "0.0.0a1"
description = "GUIDs that are verifiably generated with magic number"
authors = [
    {name = "David P. Chassin <dpchassin@gmail.com>"},
    ]
maintainers = [
    {name = "David P. Chassin <dpchassin@gmail.com>"},
    ]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    ]
keywords = ["guid","magic"]
license = {text="MIT License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    ]

[project.urls]
Homepage = "https://github.com/eudoxys/mguid"
Documentation = "https://mguid.gitub.io/"
Repository = "https://github.com/eudoxys/mguid.git"
Issues = "https://github.com/eudoxys/mguid/issues"

[project.scripts]
mguid = "mguid:main"
